--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+xbmc (2:11.0~git20120229.f38655f-0ubuntu1~ppa1~oneiric~linaro1) oneiric; urgency=low
+
+  * Add gstreamer support from Rob Clark
+  * Disable vdpau, vaapi, openmax and enable libcrystalhd-dev for armel
+  * Do not enable external libraries
+  * Run ./bootstrap before ./configure
+  * Enable neon support for armel
+  * Build with mesa library
+  * Define MESA_EGL_NO_X11_HEADERS for building with mesa headers
+  * Disable DPMS for linarotv-xbmc image
+
+ -- Avik Sil <avik.sil@linaro.org>  Fri, 02 Mar 2012 14:33:18 +0530
+
 xbmc (2:11.0~git20111222.22ad8e4-1) experimental; urgency=low
 
   * Package XBMC for Debian. (Closes: #469397)
